# github_tag_summarizer

./: .gitignore  README.md  pyproject.toml  run.sh
src/: github.py  main.py  slack_message.py  tag_summarizer.py  templates.py
src/prompts/: each_ext.prompt  each_file.prompt  overall.prompt
